# CG-RasterizationLine

./: CMakeLists.txt  main.cpp  readme.md
headers/: Algo.h  DynamicRendedLine.h  InputHandler.h  RenderableObject.h  RepeatRendedObject.h  TransformObject.h  TransfromObject.h  Window.h
shaders/: defaultFrag.frag  frag.frag  reposVert.vert  vert.vert
src/: Algo.cpp  DynamicRendedLine.cpp  InputHandler.cpp  RenderableObject.cpp  RepeatRendedObject.cpp  TransformObject.cpp  Window.cpp
